# ai-trading-assistant

./: .env.example  .gitignore  Makefile  README.md  TradingAssistant.txt  build.py  migrate_notion_watchlist.py  pyproject.toml  requirements.txt  run_desktop.bat  run_desktop_auto.bat  테마 분석은 뉴스 빈도 기반이 아니라.txt
.claude/: launch.json  settings.local.json
.githooks/: pre-commit
ai_trading_assistant/: .gitignore  build.py  requirements.txt
app/: __init__.py  deploy.py  main.py  sync.py
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: claude.py  router.py  streaming_gate.py
apps/api/app/agents/pipelines/: __init__.py  coach.py  morning_report.py  portfolio.py  research.py
apps/api/app/agents/prompts/: __init__.py  coach.py  morning_report.py  portfolio.py  research.py
apps/api/app/agents/tools/: __init__.py  definitions.py
apps/api/app/analytics/: __init__.py  journal_metrics.py  portfolio_metrics.py
apps/api/app/analytics/theme_scoring/: __init__.py  engine.py  scoring.py  signals.py
apps/api/app/api/: deps.py  errors.py
apps/api/app/api/v1/: __init__.py  auth.py  health.py  journal.py  market.py  portfolio.py  reports.py  research.py  settings.py  system.py  usage.py  watchlist.py
apps/api/app/billing/: __init__.py  plans.py
apps/api/app/compliance/: __init__.py  classifier.py  disclaimers.py  guard.py  rules.py
apps/api/app/core/: config.py  db.py  logging.py  redis.py  security.py  sse.py
apps/api/app/data_providers/: base.py  errors.py  normalization.py  registry.py
apps/api/app/data_providers/fx/: yfinance_fx_provider.py
apps/api/app/data_providers/journal/: __init__.py  notion_provider.py
apps/api/app/data_providers/kr/: fdr_provider.py
apps/api/app/data_providers/news/: rss_provider.py
apps/api/app/data_providers/us/: yfinance_provider.py
apps/api/app/models/: __init__.py  agent_run.py  base.py  data_provider_source.py  instrument.py  journal.py  morning_report.py  portfolio.py  rag.py  research_report.py  theme.py  user.py
apps/api/app/rag/: __init__.py  chunking.py  embeddings.py  evaluate.py  rerank.py  retrieve.py  store.py
apps/api/app/scheduler/: __init__.py  jobs.py  scheduler.py
apps/api/app/schemas/: auth.py  common.py  journal.py  market.py  portfolio.py  report.py  research.py
apps/api/app/services/: auth_service.py  journal_service.py  market_service.py  portfolio_service.py  rag_service.py  research_service.py  usage_service.py
apps/api/app/workers/: __init__.py  celery_app.py  tasks.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_research_report.py  0003_rag.py  0004_theme_morning_report.py  0005_trade_journal.py  0006_portfolio.py  0007_user_plan.py
apps/api/scripts/: backfill_ohlcv.py  ingest_news_rag.py  seed.py
apps/api/tests/: test_billing.py  test_claude.py  test_compliance.py  test_compliance_redlist.py  test_health.py  test_journal.py  test_normalization.py  test_portfolio.py  test_providers.py  test_rag.py  test_rag_advanced.py  test_research.py  test_security.py  test_theme_scoring.py
calculators/: __init__.py  erp_stats.py  fs_indicators.py  macro_indicators.py  news_categories.py  news_entities.py  (+1 more)
(+617 files in other folders)
