[project]
name = "th-bot-api"
version = "0.1.0"
description = "AI 투자 리서치/비서 플랫폼 — FastAPI 백엔드"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "email-validator>=2.1",
    "redis>=5.0",
    "apscheduler>=3.10",
    "celery>=5.3",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "structlog>=24.1",
    "anthropic>=0.39",
    "pgvector>=0.3",
    # data providers (lazy-imported in adapters)
    "yfinance>=0.2.40",
    "finance-datareader>=0.9.90",
    "pykrx>=1.0.45",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "anyio>=4.4",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
